# sagemath-giac

./: .gitignore  COPYING  NEWS  README.rst  meson.build  pyproject.toml
src/sage/libs/giac/: __init__.py  giac.pxd  giac.pyx  meson.build
src/sagemath_giac/: context.py  gb.py  giac.pyx  meson.build
tools/: giacpy-mkkeywords.py  mkkeywords.py
