[build-system]
requires = [
  "cython",
  "cysignals",
  "gmpy2",
  "meson-python",
  "sagemath-standard"
]
build-backend = "mesonpy"

[project]
name = "sagemath-giac"
version = "0.1.2"
description = "Support for using Giac within SageMath"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["mathematics", "algebra", "calculus", "giac", "xcas"]
license = { file = "COPYING" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[external]
# https://peps.python.org/pep-0725
host-requires = [
  "pkg:generic/giac",
]

[project.urls]
Homepage = "https://github.com/sagemath/sagemath-giac"
Documentation = "https://github.com/sagemath/sagemath-giac/blob/master/README.rst"
Repository = "https://github.com/sagemath/sagemath-giac.git"
Issues = "https://github.com/sagemath/sagemath-giac/issues"
Changelog = "https://github.com/sagemath/sagemath-giac/raw/master/NEWS"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.pyx' --doctest-glob='*.rst'"
